src/test/ui/rfc1598-generic-associated-types/collections.stderr
error[E0109]: type parameters are not allowed on this type
  --> $DIR/collections.rs:57:90
   |
LL | fn floatify<C>(ints: &C) -> <<C as Collection<i32>>::Family as CollectionFamily>::Member<f32>
   |                                                                                          ^^^ type parameter not allowed

error[E0109]: type parameters are not allowed on this type
  --> $DIR/collections.rs:67:69
   |
LL | fn floatify_sibling<C>(ints: &C) -> <C as Collection<i32>>::Sibling<f32>
   |                                                                     ^^^ type parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/collections.rs:23:50
   |
LL |     fn iterate<'iter>(&'iter self) -> Self::Iter<'iter>;
   |                                                  ^^^^^ lifetime parameter not allowed on this type

error[E0109]: type parameters are not allowed on this type
  --> $DIR/collections.rs:28:100
   |
LL |     type Sibling<U>: Collection<U> = <<Self as Collection<T>>::Family as CollectionFamily>::Member<U>;
   |                                                                                                    ^ type parameter not allowed

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/collections.rs:49:50
   |
LL |     fn iterate<'iter>(&'iter self) -> Self::Iter<'iter> {
   |                                                  ^^^^^ lifetime parameter not allowed on this type

error: aborting due to 5 previous errors

Some errors occurred: E0109, E0110.
For more information about an error, try `rustc --explain E0109`.
